/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin for API and implementation separation.
    id 'application'
}

archivesBaseName = 'joe'
version = "0.9.0"

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

task myJavadocs(type: Javadoc) {
    source = sourceSets.main.allJava
}

application {
    // Define the main class for the application.
    mainClass = 'com.wjduquette.joe.app.App'
}
